--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.jon.lv</groupId>
@@ -122,6 +122,24 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.2.1</version>
 		</dependency>
+		
+		<!-- poi包 -->
+		<dependency>
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>poi</artifactId>
+		    <version>3.17</version>
+		</dependency>
+		<dependency>
+	       <groupId>org.apache.poi</groupId>
+	       <artifactId>poi-ooxml</artifactId>
+     	   <version>3.17</version>
+ 		</dependency>
+		 <dependency>
+		     <groupId>org.apache.poi</groupId>
+		    <artifactId>poi-ooxml-schemas</artifactId>
+		     <version>3.17</version>
+		 </dependency>
+		
 
 		<!--swagger start-->
 		<dependency>
@@ -208,7 +226,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.4</version>
 				<configuration>
 					<skip>true</skip>
 				</configuration>
