--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,132 +1,131 @@
 server.port=8098
 server.context-path=/
 
-#logbackÅäÖÃ
+#logbacké…ç½®
 logging.config=classpath:logback.xml
 
-#mybatisÅäÖÃ
+#mybatisé…ç½®
 mybatis.config-location=classpath:mybatis/mybatis-config.xml
 mybatis.mapper-locations=classpath:mybatis/mappers/*.xml
 mybatis.type-aliases-package=org.jon.lv.domain
 
-#Êı¾İ¿âÉèÖÃ
+#æ•°æ®åº“è®¾ç½®
 datasource.type=com.alibaba.druid.pool.DruidDataSource
 #spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/test_read?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=1234
 #--------------------------
 #  lhspvisiiiaebifh
-# ÏÂÃæÎªÁ¬½Ó³ØµÄ²¹³äÉèÖÃ£¬Ó¦ÓÃµ½ÉÏÃæËùÓĞÊı¾İÔ´ÖĞ
-# ³õÊ¼»¯´óĞ¡£¬×îĞ¡£¬×î´ó
+# ä¸‹é¢ä¸ºè¿æ¥æ± çš„è¡¥å……è®¾ç½®ï¼Œåº”ç”¨åˆ°ä¸Šé¢æ‰€æœ‰æ•°æ®æºä¸­
+# åˆå§‹åŒ–å¤§å°ï¼Œæœ€å°ï¼Œæœ€å¤§
 spring.datasource.initialSize=5
 spring.datasource.minIdle=5
 spring.datasource.maxActive=20
-# ÅäÖÃ»ñÈ¡Á¬½ÓµÈ´ı³¬Ê±µÄÊ±¼ä
+# é…ç½®è·å–è¿æ¥ç­‰å¾…è¶…æ—¶çš„æ—¶é—´
 spring.datasource.maxWait=60000
-# ÅäÖÃ¼ä¸ô¶à¾Ã²Å½øĞĞÒ»´Î¼ì²â£¬¼ì²âĞèÒª¹Ø±ÕµÄ¿ÕÏĞÁ¬½Ó£¬µ¥Î»ÊÇºÁÃë
+# é…ç½®é—´éš”å¤šä¹…æ‰è¿›è¡Œä¸€æ¬¡æ£€æµ‹ï¼Œæ£€æµ‹éœ€è¦å…³é—­çš„ç©ºé—²è¿æ¥ï¼Œå•ä½æ˜¯æ¯«ç§’
 spring.datasource.timeBetweenEvictionRunsMillis=60000
-# ÅäÖÃÒ»¸öÁ¬½ÓÔÚ³ØÖĞ×îĞ¡Éú´æµÄÊ±¼ä£¬µ¥Î»ÊÇºÁÃë
+# é…ç½®ä¸€ä¸ªè¿æ¥åœ¨æ± ä¸­æœ€å°ç”Ÿå­˜çš„æ—¶é—´ï¼Œå•ä½æ˜¯æ¯«ç§’
 spring.datasource.minEvictableIdleTimeMillis=300000
 spring.datasource.validationQuery=SELECT 1 FROM DUAL
 spring.datasource.testWhileIdle=true
 spring.datasource.testOnBorrow=false
 spring.datasource.testOnReturn=false
-# ´ò¿ªPSCache£¬²¢ÇÒÖ¸¶¨Ã¿¸öÁ¬½ÓÉÏPSCacheµÄ´óĞ¡
+# æ‰“å¼€PSCacheï¼Œå¹¶ä¸”æŒ‡å®šæ¯ä¸ªè¿æ¥ä¸ŠPSCacheçš„å¤§å°
 spring.datasource.poolPreparedStatements=true
 spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
-# ÅäÖÃ¼à¿ØÍ³¼ÆÀ¹½ØµÄfilters£¬È¥µôºó¼à¿Ø½çÃæsqlÎŞ·¨Í³¼Æ£¬'wall'ÓÃÓÚ·À»ğÇ½
+# é…ç½®ç›‘æ§ç»Ÿè®¡æ‹¦æˆªçš„filtersï¼Œå»æ‰åç›‘æ§ç•Œé¢sqlæ— æ³•ç»Ÿè®¡ï¼Œ'wall'ç”¨äºé˜²ç«å¢™
 spring.datasource.filters=stat,wall,log4j
-# Í¨¹ıconnectPropertiesÊôĞÔÀ´´ò¿ªmergeSql¹¦ÄÜ£»ÂıSQL¼ÇÂ¼
+# é€šè¿‡connectPropertieså±æ€§æ¥æ‰“å¼€mergeSqlåŠŸèƒ½ï¼›æ…¢SQLè®°å½•
 spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
-# ºÏ²¢¶à¸öDruidDataSourceµÄ¼à¿ØÊı¾İ
+# åˆå¹¶å¤šä¸ªDruidDataSourceçš„ç›‘æ§æ•°æ®
 spring.datasource.useGlobalDataSourceStat=true
 
-#slaveÊı¾İÔ´
+#slaveæ•°æ®æº
 #slave.datasource.type=com.alibaba.druid.pool.DruidDataSource
 slave.datasource.driverClassName=com.mysql.jdbc.Driver
-slave.datasource.url=jdbc:mysql://localhost:3306/test_read_2?useUnicode=true&characterEncoding=utf-8
+slave.datasource.url=jdbc:mysql://localhost:3306/test_read?useUnicode=true&characterEncoding=utf-8
 slave.datasource.username=root
-slave.datasource.password=123456
+slave.datasource.password=1234
 slave.datasource.initialSize=5
 slave.datasource.minIdle=5
 slave.datasource.maxActive=20
-# ÅäÖÃ»ñÈ¡Á¬½ÓµÈ´ı³¬Ê±µÄÊ±¼ä
+# é…ç½®è·å–è¿æ¥ç­‰å¾…è¶…æ—¶çš„æ—¶é—´
 slave.datasource.maxWait=60000
-# ÅäÖÃ¼ä¸ô¶à¾Ã²Å½øĞĞÒ»´Î¼ì²â£¬¼ì²âĞèÒª¹Ø±ÕµÄ¿ÕÏĞÁ¬½Ó£¬µ¥Î»ÊÇºÁÃë
+# é…ç½®é—´éš”å¤šä¹…æ‰è¿›è¡Œä¸€æ¬¡æ£€æµ‹ï¼Œæ£€æµ‹éœ€è¦å…³é—­çš„ç©ºé—²è¿æ¥ï¼Œå•ä½æ˜¯æ¯«ç§’
 slave.datasource.timeBetweenEvictionRunsMillis=60000
-# ÅäÖÃÒ»¸öÁ¬½ÓÔÚ³ØÖĞ×îĞ¡Éú´æµÄÊ±¼ä£¬µ¥Î»ÊÇºÁÃë
+# é…ç½®ä¸€ä¸ªè¿æ¥åœ¨æ± ä¸­æœ€å°ç”Ÿå­˜çš„æ—¶é—´ï¼Œå•ä½æ˜¯æ¯«ç§’
 slave.datasource.minEvictableIdleTimeMillis=300000
 slave.datasource.validationQuery=SELECT 1 FROM DUAL
 slave.datasource.testWhileIdle=true
 slave.datasource.testOnBorrow=false
 slave.datasource.testOnReturn=false
-# ´ò¿ªPSCache£¬²¢ÇÒÖ¸¶¨Ã¿¸öÁ¬½ÓÉÏPSCacheµÄ´óĞ¡
+# æ‰“å¼€PSCacheï¼Œå¹¶ä¸”æŒ‡å®šæ¯ä¸ªè¿æ¥ä¸ŠPSCacheçš„å¤§å°
 slave.datasource.poolPreparedStatements=true
 slave.datasource.maxPoolPreparedStatementPerConnectionSize=20
-# ÅäÖÃ¼à¿ØÍ³¼ÆÀ¹½ØµÄfilters£¬È¥µôºó¼à¿Ø½çÃæsqlÎŞ·¨Í³¼Æ£¬'wall'ÓÃÓÚ·À»ğÇ½
+# é…ç½®ç›‘æ§ç»Ÿè®¡æ‹¦æˆªçš„filtersï¼Œå»æ‰åç›‘æ§ç•Œé¢sqlæ— æ³•ç»Ÿè®¡ï¼Œ'wall'ç”¨äºé˜²ç«å¢™
 slave.datasource.filters=stat,wall,log4j
-# Í¨¹ıconnectPropertiesÊôĞÔÀ´´ò¿ªmergeSql¹¦ÄÜ£»ÂıSQL¼ÇÂ¼
+# é€šè¿‡connectPropertieså±æ€§æ¥æ‰“å¼€mergeSqlåŠŸèƒ½ï¼›æ…¢SQLè®°å½•
 slave.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
-# ºÏ²¢¶à¸öDruidDataSourceµÄ¼à¿ØÊı¾İ
+# åˆå¹¶å¤šä¸ªDruidDataSourceçš„ç›‘æ§æ•°æ®
 slave.datasource.useGlobalDataSourceStat=true
 
 ########################################################
 ###mail setting
 ########################################################
-# ÉèÖÃÓÊÏäÖ÷»ú
+# è®¾ç½®é‚®ç®±ä¸»æœº
 spring.mail.host=smtp.qq.com
-# ÉèÖÃÓÃ»§Ãû
-spring.mail.username=316476844@qq.com
-# ÉèÖÃÃÜÂë
+# è®¾ç½®ç”¨æˆ·å
+spring.mail.username=372850843@qq.com
+# è®¾ç½®å¯†ç 
 spring.mail.password=
-# ÉèÖÃÊÇ·ñĞèÒªÈÏÖ¤£¬Èç¹ûÎªtrue,ÄÇÃ´ÓÃ»§ÃûºÍÃÜÂë¾Í±ØĞëµÄ£¬
-#Èç¹ûÉèÖÃfalse£¬¿ÉÒÔ²»ÉèÖÃÓÃ»§ÃûºÍÃÜÂë£¬µ±È»Ò²µÃ¿´ÄãµÄ¶Ô½ÓµÄÆ½Ì¨ÊÇ·ñÖ§³ÖÎŞÃÜÂë½øĞĞ·ÃÎÊµÄ¡£
+# è®¾ç½®æ˜¯å¦éœ€è¦è®¤è¯ï¼Œå¦‚æœä¸ºtrue,é‚£ä¹ˆç”¨æˆ·åå’Œå¯†ç å°±å¿…é¡»çš„ï¼Œ
+#å¦‚æœè®¾ç½®falseï¼Œå¯ä»¥ä¸è®¾ç½®ç”¨æˆ·åå’Œå¯†ç ï¼Œå½“ç„¶ä¹Ÿå¾—çœ‹ä½ çš„å¯¹æ¥çš„å¹³å°æ˜¯å¦æ”¯æŒæ— å¯†ç è¿›è¡Œè®¿é—®çš„ã€‚
 spring.mail.properties.mail.smtp.auth=true
-# STARTTLS[1]  ÊÇ¶Ô´¿ÎÄ±¾Í¨ĞÅĞ­ÒéµÄÀ©Õ¹¡£ËüÌá¹©Ò»ÖÖ·½Ê½½«´¿ÎÄ±¾Á¬½ÓÉı¼¶Îª¼ÓÃÜÁ¬½Ó£¨TLS»òSSL£©£¬¶ø²»ÊÇÁíÍâÊ¹ÓÃÒ»¸ö¶Ë¿Ú×÷¼ÓÃÜÍ¨ĞÅ¡£
+# STARTTLS[1]  æ˜¯å¯¹çº¯æ–‡æœ¬é€šä¿¡åè®®çš„æ‰©å±•ã€‚å®ƒæä¾›ä¸€ç§æ–¹å¼å°†çº¯æ–‡æœ¬è¿æ¥å‡çº§ä¸ºåŠ å¯†è¿æ¥ï¼ˆTLSæˆ–SSLï¼‰ï¼Œè€Œä¸æ˜¯å¦å¤–ä½¿ç”¨ä¸€ä¸ªç«¯å£ä½œåŠ å¯†é€šä¿¡ã€‚
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
-#########spring redisÅäÖÃ
-# RedisÊı¾İ¿âË÷Òı£¨Ä¬ÈÏÎª0£©
+#########spring redisé…ç½®
+# Redisæ•°æ®åº“ç´¢å¼•ï¼ˆé»˜è®¤ä¸º0ï¼‰
 #spring.redis.database=0
-# Redis·şÎñÆ÷µØÖ·
-spring.redis.host=192.168.88.164
-# Redis·şÎñÆ÷Á¬½Ó¶Ë¿Ú
+# RedisæœåŠ¡å™¨åœ°å€
+spring.redis.host=127.0.0.1
+# RedisæœåŠ¡å™¨è¿æ¥ç«¯å£
 spring.redis.port=6379
-# Redis·şÎñÆ÷Á¬½ÓÃÜÂë£¨Ä¬ÈÏÎª¿Õ£©
+# RedisæœåŠ¡å™¨è¿æ¥å¯†ç ï¼ˆé»˜è®¤ä¸ºç©ºï¼‰
 spring.redis.password=
-# Á¬½Ó³Ø×î´óÁ¬½ÓÊı£¨Ê¹ÓÃ¸ºÖµ±íÊ¾Ã»ÓĞÏŞÖÆ£©
+# è¿æ¥æ± æœ€å¤§è¿æ¥æ•°ï¼ˆä½¿ç”¨è´Ÿå€¼è¡¨ç¤ºæ²¡æœ‰é™åˆ¶ï¼‰
 spring.redis.pool.max-active=8
-# Á¬½Ó³Ø×î´ó×èÈûµÈ´ıÊ±¼ä£¨Ê¹ÓÃ¸ºÖµ±íÊ¾Ã»ÓĞÏŞÖÆ£©
+# è¿æ¥æ± æœ€å¤§é˜»å¡ç­‰å¾…æ—¶é—´ï¼ˆä½¿ç”¨è´Ÿå€¼è¡¨ç¤ºæ²¡æœ‰é™åˆ¶ï¼‰
 spring.redis.pool.max-wait=-1
-# Á¬½Ó³ØÖĞµÄ×î´ó¿ÕÏĞÁ¬½Ó
+# è¿æ¥æ± ä¸­çš„æœ€å¤§ç©ºé—²è¿æ¥
 spring.redis.pool.max-idle=8
-# Á¬½Ó³ØÖĞµÄ×îĞ¡¿ÕÏĞÁ¬½Ó
+# è¿æ¥æ± ä¸­çš„æœ€å°ç©ºé—²è¿æ¥
 spring.redis.pool.min-idle=0
-# Á¬½Ó³¬Ê±Ê±¼ä£¨ºÁÃë£©
+# è¿æ¥è¶…æ—¶æ—¶é—´ï¼ˆæ¯«ç§’ï¼‰
 spring.redis.timeout=5000
 
-###########kafkaÅäÖÃ###########
-# Ö¸¶¨kafka ´úÀíµØÖ·£¬¿ÉÒÔ¶à¸ö
-spring.kafka.bootstrap-servers=192.168.88.177:9092
-# Ö¸¶¨Ä¬ÈÏÏû·ÑÕßgroup id
+###########kafkaé…ç½®###########
+# æŒ‡å®škafka ä»£ç†åœ°å€ï¼Œå¯ä»¥å¤šä¸ª
+spring.kafka.bootstrap-servers=127.0.0.1:9092
+# æŒ‡å®šé»˜è®¤æ¶ˆè´¹è€…group id
 spring.kafka.consumer.group-id=jonGroup
-# Ö¸¶¨Ä¬ÈÏtopic id
+# æŒ‡å®šé»˜è®¤topic id
 spring.kafka.template.default-topic= jon-replicated-topic
-# Ö¸¶¨listener ÈİÆ÷ÖĞµÄÏß³ÌÊı£¬ÓÃÓÚÌá¸ß²¢·¢Á¿
+# æŒ‡å®šlistener å®¹å™¨ä¸­çš„çº¿ç¨‹æ•°ï¼Œç”¨äºæé«˜å¹¶å‘é‡
 spring.kafka.listener.concurrency= 3
-# Ã¿´ÎÅúÁ¿·¢ËÍÏûÏ¢µÄÊıÁ¿
+# æ¯æ¬¡æ‰¹é‡å‘é€æ¶ˆæ¯çš„æ•°é‡
 spring.kafka.producer.batch-size= 1000
 
-##################esÅäÖÃ############
-#¿ªÆô Elasticsearch ²Ö¿â
-spring.data.elasticsearch.repositories.enabled=true
-#Elasticsearch ¼¯ÈºÃûelasticsearch
+###################esé…ç½®############
+##å¼€å¯ Elasticsearch ä»“åº“
+#spring.data.elasticsearch.repositories.enabled=true
+##Elasticsearch é›†ç¾¤åelasticsearch
 #spring.data.elasticsearch.cluster-name=cluster01
-spring.data.elasticsearch.cluster-name=cluster01
-#¼¯Èº½ÚµãµØÖ·ÁĞ±í£¬ÓÃ¶ººÅ·Ö¸ô¡£Èç¹ûÃ»ÓĞÖ¸¶¨£¬¾ÍÆô¶¯Ò»¸ö¿Í»§¶Ë½Úµã
-spring.data.elasticsearch.cluster-nodes=192.168.88.176:9300
-#elasticsearch.cluster-name=cluster01
-#elasticsearch.host=192.168.88.176
-#elasticsearch.port=9300
+##é›†ç¾¤èŠ‚ç‚¹åœ°å€åˆ—è¡¨ï¼Œç”¨é€—å·åˆ†éš”ã€‚å¦‚æœæ²¡æœ‰æŒ‡å®šï¼Œå°±å¯åŠ¨ä¸€ä¸ªå®¢æˆ·ç«¯èŠ‚ç‚¹
+#spring.data.elasticsearch.cluster-nodes=127.0.0.1:9300
+##elasticsearch.cluster-name=cluster01
+##elasticsearch.host=127.0.0.1
+##elasticsearch.port=9300
