--- a/pom.xml
+++ b/pom.xml
@@ -194,6 +194,12 @@
 			<artifactId>zkclient</artifactId>
 			<version>${com.github.sgroschupf.zkclient.version}</version>
 		</dependency>
+		
+		<dependency>
+    		<groupId>com.sun.jna</groupId>
+    		<artifactId>jna</artifactId>
+    		<version>3.0.9</version>
+		</dependency>
 		<!--<dependency>
 			<groupId>com.101tec</groupId>
 			<artifactId>zkclient</artifactId>
