--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -111,9 +111,9 @@ spring.redis.timeout=5000
 # 指定kafka 代理地址，可以多个
 spring.kafka.bootstrap-servers=127.0.0.1:9092
 # 指定默认消费者group id
-spring.kafka.consumer.group-id=jonGroup
+#spring.kafka.consumer.group-id=jonGroup
 # 指定默认topic id
-spring.kafka.template.default-topic= jon-replicated-topic
+#spring.kafka.template.default-topic= jon-replicated-topic
 # 指定listener 容器中的线程数，用于提高并发量
 spring.kafka.listener.concurrency= 3
 # 每次批量发送消息的数量
@@ -123,9 +123,9 @@ spring.kafka.producer.batch-size= 1000
 ##开启 Elasticsearch 仓库
 #spring.data.elasticsearch.repositories.enabled=true
 ##Elasticsearch 集群名elasticsearch
-#spring.data.elasticsearch.cluster-name=cluster01
+spring.data.elasticsearch.cluster-name=mml
 ##集群节点地址列表，用逗号分隔。如果没有指定，就启动一个客户端节点
 #spring.data.elasticsearch.cluster-nodes=127.0.0.1:9300
-##elasticsearch.cluster-name=cluster01
-##elasticsearch.host=127.0.0.1
-##elasticsearch.port=9300
+spring.data.elasticsearch.host=127.0.0.1
+spring.data.elasticsearch.port=9300
+#spring.date.elasticsearch.repositories.enable=true
