--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -91,7 +91,7 @@ spring.mail.properties.mail.smtp.starttls.required=true
 # Redis数据库索引（默认为0）
 #spring.redis.database=0
 # Redis服务器地址
-spring.redis.host=127.0.0.1
+spring.redis.host=144.34.230.73
 # Redis服务器连接端口
 spring.redis.port=6379
 # Redis服务器连接密码（默认为空）
@@ -111,9 +111,9 @@ spring.redis.timeout=5000
 # 指定kafka 代理地址，可以多个
 spring.kafka.bootstrap-servers=127.0.0.1:9092
 # 指定默认消费者group id
-#spring.kafka.consumer.group-id=jonGroup
-# 指定默认topic id
-#spring.kafka.template.default-topic= jon-replicated-topic
+spring.kafka.consumer.group-id=mmlGroup
+# 指定默认topic id  jon-replicated-topic
+spring.kafka.template.default-topic= mml
 # 指定listener 容器中的线程数，用于提高并发量
 spring.kafka.listener.concurrency= 3
 # 每次批量发送消息的数量
